# manipulator_ws

./: .gitignore  .gitmodules  README.md  docker-compose.yml
.devcontainer/: Dockerfile  docker-entrypoint.sh
.github/workflows/: build-n-publish.yaml  build-n-test.yaml
src/manipulator_simple/: CMakeLists.txt  package.xml
src/manipulator_simple/include/manipulator_simple/: ManipulatorSimple.hpp
src/manipulator_simple/src/: ManipulatorSimple.cpp  main.cpp
